# pepper_ign_moveit2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  allignment.py  sdf2urdf.py  test.sdf  test1.sdf  version9.sdf
.docker/: build.bash  dev.bash  (+4 more)
pepper_robot_description/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  meshes  package.xml  symlink_install_manifest.txt
pepper_robot_description/ament_cmake_core/: package.cmake  pepper_robot_descriptionConfig.cmake
pepper_robot_description/ament_cmake_environment_hooks/: local_setup.bash  local_setup.dsv  local_setup.sh  package.dsv
pepper_robot_description/ament_cmake_symlink_install/: ament_cmake_symlink_install.cmake  ament_cmake_symlink_install_uninstall_script.cmake
pepper_robot_description/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
pepper_robot_description/config/: initial_joint_positions.yaml
pepper_robot_description/launch/: view.launch.py  view_gz.launch.py  view_ign.launch.py
pepper_robot_description/pepper_robot/: model.config  model.sdf
pepper_robot_description/rviz/: view.rviz
pepper_robot_description/scripts/: estimate_inertial_properties.py  estimate_inertial_properties_2.py  xacro2sdf.bash  xacro2sdf_direct.bash  xacro2urdf.bash
pepper_robot_description/urdf/: pepper.urdf  pepper_arms.xacro  pepper_fingers.xacro  pepper_head.xacro  pepper_legs.xacro  pepper_robot.gazebo  pepper_robot.ros2_control  pepper_robot.urdf  pepper_robot.urdf.xacro  pepper_robot.xacro  pepper_sensors.xacro  pepper_torso.xacro  pepper_visual_collisions.xacro  pepper_wheels.xacro  urdf1
pepper_robot_ign/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt
pepper_robot_ign/ament_cmake_core/: package.cmake  pepper_robot_ignConfig.cmake
pepper_robot_ign/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
pepper_robot_ign/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
pepper_robot_ign/examples/: ex_follow_target.py
pepper_robot_ign/launch/: bridge.launch.py
pepper_robot_ign/rviz/: ign_moveit2.rviz
pepper_robot_moveit_config/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  package.xml
(+72 files in other folders)
