<?xml version="1.0"?>
<package format="3">
  <name>pepper_robot_description</name>
  <version>1.0.0</version>
  <description>URDF and SDF description of pepper_robot in ROS2 galactic (Moveit2)</description>
  <maintainer email="h.sekkat@ueuromed.org">Hiba Sekkat</maintainer>
  <author>Hiba Sekkat</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
